--- a/src/styles/components/_logo.scss
+++ b/src/styles/components/_logo.scss
@@ -2,6 +2,7 @@
   @include verticalCenter;
   margin: 5px auto;
   width: 200px;
+  height: 60px;
   border-radius: 20px;
   padding: 5px 0;
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.307);
